/*
 *
 * Copyright 2018 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

option java_package = "io.masterkun.axor.runtime.stream.grpc.proto";
option java_outer_classname = "KActorProto";

package axor;

message Void {

}

message Noop {
  int32 value = 1;
}

message ResStatus {
  int32 code = 1;
  string message = 2;
}

message ActorAddress {
  string system = 1;
  string host = 2;
  int32 port = 3;
  string name = 4;
}

message MsgType {
  oneof type {
    string stringType = 1;
    int32 idType = 2;
  }
  repeated MsgType typeArgs = 3;
}
